# stepzen_gql_soap

./: README.md  apis.json  main.py  pyproject.toml  schema.graphql  stepzen.config.json
schemas/SOAP_my_first_stepzen/: schema.graphql
schemas/SOAP_my_second_stepzen/: schema.graphql
schemas/SOAP_my_third_stepzen/: schema.graphql
